<resources>
    <string name="app_name">PushApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_log_in">Google logIn</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAkngvIEhkf6P7IDyCrZbVBIobA_ENIIOA</string>
    <string name="title_activity_mobile2">Mobile Based2(모바일:구글-ditance1 함수)</string>
    <string name="position_log">위치 기록</string>
    <string name="current_position">현재 위치</string>


</resources>
